common/force-app/main/default/objects/Chart_Of_Account__c/Chart_Of_Account__c.object-meta.xml
<CustomObject>
    <label>Chart Of Account</label>
    <nameField>
        <label>Chart Of Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart Of Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>