common/force-app/main/default/objects/Chart_Of_Account__c/fields/Redemption_Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Payment_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redemption Payment Account</label>
    <type>Checkbox</type>
</CustomField>