common/force-app/main/default/objects/Chart_Of_Account__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>