common/force-app/main/default/objects/Chart_Of_Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>